# VisionVegas

./: .gitignore  Numberweights  README  README.md  captured.pnm  weights
src/: BlobDetector.cpp  BlobDetector.h  BlobDetector.hpp  CMakeLists.txt  backgroundPerceptron.cpp  blobdetector.cpp  blobdetector.hpp  card.cpp  card.hpp  carddetection.cpp  carddetector.cpp  carddetector.hpp  geom.cpp  geom.hpp  image.cpp  image.hpp  main.cpp  numberPerceptron.cpp  perceptron.cpp  perceptron.hpp  player.cpp  player.hpp
src/.svn/: entries
src/.svn/text-base/: CMakeLists.txt.svn-base  card.hpp.svn-base  geom.hpp.svn-base  image.cpp.svn-base  image.hpp.svn-base
trainingdata/: e10.1.pnm  e10.1_mask.pnm  e10.2.pnm  e10.2_mask.pnm  e2.1.pnm  e2.1_mask.pnm  e2.2.pnm  e2.2_mask.pnm  e3.1.pnm  e3.1_mask.pnm  e3.2.pnm  e3.2_mask.pnm  e4.1.pnm  e4.1_mask.pnm  e4.2.pnm  e4.2_mask.pnm  e5.1.pnm  e5.1_mask.pnm  e6.1.pnm  e6.1_mask.pnm  e6.2.pnm  e6.2_mask.pnm  e7.1.pnm  e7.1_mask.pnm  e7.2.pnm  e7.2_mask.pnm  e8.1.pnm  e8.1_mask.pnm  e8.2.pnm  e8.2_mask.pnm  e9.1.pnm  e9.1_mask.pnm  e9.2.pnm  e9.2_mask.pnm  ea.1.pnm  ea.1_mask.pnm  ej.1.pnm  ej.1_mask.pnm  ej.2.pnm  ej.2_mask.pnm  (+65 more)
trainingdata/tmp/: 10_output_e5.2.pnm  11_output_e6.1.pnm  12_output_e6.2.pnm  13_output_e7.1.pnm  14_output_e7.2.pnm  15_output_e8.1.pnm  16_output_e8.2.pnm  17_output_e9.1.pnm  18_output_e9.2.pnm  19_output_ea.1.pnm  20_output_ea.2.pnm  21_output_ej.1.pnm  22_output_ej.2.pnm  23_output_ek.1.pnm  24_output_ek.2.pnm  25_output_eq.1.pnm  26_output_eq.2.pnm  27_output_h10.1.pnm  28_output_h10.2.pnm  (+48 more)
